# wiyata.hs

./: .editorconfig  .gitignore  Main.hs  README.md  cabal.project  package.yaml  stack.yaml  wiyata.cabal
.github/workflows/: haskell.yaml  test.yaml
AdventOfCode/: Dive.hs  ReportRepair.hs  RocketEquation.hs  RocketEquationTest.hs  SonarSweep.hs  SonarSweepTest.hs
Codeforces/: Reorder.hs  ReorderTest.hs
Codewars/: ConsecutiveStrings.hs  ConsecutiveStringsTest.hs  OddOrEven.hs  OddOrEvenTest.hs  ReverseRecursively.hs  ReverseRecursivelyTest.hs  StringRepeat.hs  StringRepeatTest.hs
Codility/: BinaryGap.hs  BinaryGapTest.hs  OddOccurrencesInArray.hs  OddOccurrencesInArrayTest.hs
CodinGame/: HorseRacingDuals.hs  HorseRacingDualsTest.hs  Onboarding.hs  OnboardingTest.hs  Temperatures.hs  TemperaturesTest.hs  TheDescent.hs  TheDescentTest.hs
DMOJ/: NextInLine.hs  NextInLineTest.hs  TriangleTimes.hs  TriangleTimesTest.hs
Exercism/: CollatzConjecture.hs  CollatzConjectureTest.hs  Pangram.hs  PangramTest.hs
HackerRank/: AlphabeticallySmallest.hs  AlphabeticallySmallestTest.hs  BalancedBrackets.hs  BalancedBracketsTest.hs  CountingValleys.hs  CountingValleysTest.hs  Fibonacci.hs  FibonacciTest.hs  FirstRepeatedWord.hs  FirstRepeatedWordTest.hs  PlusMinus.hs  PlusMinusTest.hs  RepeatedString.hs  RepeatedStringTest.hs  SalesByMatch.hs  SalesByMatchTest.hs  SlowestKeyPress.hs  SlowestKeyPressTest.hs  TheJungleBook.hs  TheJungleBookTest.hs
KickStart/: EvenDigits.hs  EvenDigitsTest.hs
LeetCode/: EvaluateReversePolishNotation.hs  EvaluateReversePolishNotationTest.hs  LongestSubstring.hs  LongestSubstringTest.hs  RichestCustomerWealth.hs  RichestCustomerWealthTest.hs  StringToInteger.hs  StringToIntegerTest.hs  ValidParentheses.hs  ValidParenthesesTest.hs
OpenKattis/: Everywhere.hs  EverywhereTest.hs  FreeFood.hs  FreeFoodTest.hs  ToLower.hs  ToLowerTest.hs
src/: Main.hs
src/AdventOfCode/: Dive.hs
src/Codeforces/: Reorder.hs
src/Codewars/: ConsecutiveStrings.hs  OddOrEvenTest.hs  ReverseRecursively.hs  ReverseRecursivelyTest.hs  StringRepeatTest.hs
src/Codility/: BinaryGap.hs  OddOccurrencesInArray.hs  OddOccurrencesInArrayTest.hs
src/CodinGame/: HorseRacingDuals.hs  Onboarding.hs  OnboardingTest.hs  Temperatures.hs  TemperaturesTest.hs  TheDescent.hs  TheDescentTest.hs
src/DMOJ/: NextInLine.hs
src/Exercism/: CollatzConjecture.hs
src/HackerRank/: BalancedBrackets.hs  CountingValleys.hs  Fibonacci.hs  PlusMinus.hs  PlusMinusTest.hs  RepeatedString.hs  RepeatedStringTest.hs  SlowestKeyPress.hs  TheJungleBook.hs
src/KickStart/: EvenDigits.hs
src/LeetCode/: EvaluateReversePolishNotation.hs  ValidParentheses.hs
src/OpenKattis/: Everywhere.hs  EverywhereTest.hs  FreeFood.hs  FreeFoodTest.hs  ToLower.hs  ToLowerTest.hs
tests/: Main.hs
tests/AdventOfCode/: DiveTest.hs  ReportRepairTest.hs  RocketEquationTest.hs
tests/Codeforces/: ReorderTest.hs
tests/Codewars/: OddOrEvenTest.hs  ReverseRecursivelyTest.hs  StringRepeatTest.hs
tests/Codility/: BinaryGapTest.hs  OddOccurrencesInArrayTest.hs
tests/CodinGame/: HorseRacingDualsTest.hs  OnboardingTest.hs  TemperaturesTest.hs  TheDescentTest.hs
tests/DMOJ/: NextInLineTest.hs  TriangleTimesTest.hs
tests/Exercism/: CollatzConjectureTest.hs  PangramTest.hs
tests/HackerRank/: CountingValleysTest.hs  FibonacciTest.hs  FirstRepeatedWordTest.hs  PlusMinusTest.hs  RepeatedStringTest.hs  SlowestKeyPressTest.hs  TheJungleBookTest.hs
tests/KickStart/: EvenDigitsTest.hs
tests/LeetCode/: EvaluateReversePolishNotationTest.hs  LongestSubstringTest.hs  RichestCustomerWealthTest.hs  ValidParenthesesTest.hs
tests/OpenKattis/: EverywhereTest.hs  FreeFoodTest.hs  ToLowerTest.hs
