cabal-version:      3.0
name:               wiyata
version:            0.0.0
description:        A collection of solutions written in Haskell
homepage:           https://github.com/zweimach/wiyata.hs#readme
bug-reports:        https://github.com/zweimach/wiyata.hs/issues
author:             Ananda Umamil
maintainer:         zweimach@zweimach.org
copyright:          2018 Ananda Umamil
license:            MIT
license-file:       LICENSE
build-type:         Simple
extra-source-files:
    LICENSE
    README.md

source-repository head
    type:     git
    location: https://github.com/zweimach/wiyata.hs

test-suite wiyata-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    other-modules:
        AdventOfCode.Dive
        AdventOfCode.DiveTest
        AdventOfCode.ReportRepair
        AdventOfCode.ReportRepairTest
        AdventOfCode.RocketEquation
        AdventOfCode.RocketEquationTest
        AdventOfCode.SonarSweep
        AdventOfCode.SonarSweepTest
        Codeforces.Reorder
        Codeforces.ReorderTest
        Codewars.ConsecutiveStrings
        Codewars.ConsecutiveStringsTest
        Codewars.OddOrEven
        Codewars.OddOrEvenTest
        Codewars.ReverseRecursively
        Codewars.ReverseRecursivelyTest
        Codewars.StringRepeat
        Codewars.StringRepeatTest
        Codility.BinaryGap
        Codility.BinaryGapTest
        Codility.OddOccurrencesInArray
        Codility.OddOccurrencesInArrayTest
        CodinGame.HorseRacingDuals
        CodinGame.HorseRacingDualsTest
        CodinGame.Onboarding
        CodinGame.OnboardingTest
        CodinGame.Temperatures
        CodinGame.TemperaturesTest
        CodinGame.TheDescent
        CodinGame.TheDescentTest
        DMOJ.NextInLine
        DMOJ.NextInLineTest
        DMOJ.TriangleTimes
        DMOJ.TriangleTimesTest
        Exercism.CollatzConjecture
        Exercism.CollatzConjectureTest
        Exercism.Pangram
        Exercism.PangramTest
        HackerRank.AlphabeticallySmallest
        HackerRank.AlphabeticallySmallestTest
        HackerRank.BalancedBrackets
        HackerRank.BalancedBracketsTest
        HackerRank.CountingValleys
        HackerRank.CountingValleysTest
        HackerRank.Fibonacci
        HackerRank.FibonacciTest
        HackerRank.FirstRepeatedWord
        HackerRank.FirstRepeatedWordTest
        HackerRank.PlusMinus
        HackerRank.PlusMinusTest
        HackerRank.RepeatedString
        HackerRank.RepeatedStringTest
        HackerRank.SalesByMatch
        HackerRank.SalesByMatchTest
        HackerRank.SlowestKeyPress
        HackerRank.SlowestKeyPressTest
        HackerRank.TheJungleBook
        HackerRank.TheJungleBookTest
        KickStart.EvenDigits
        KickStart.EvenDigitsTest
        LeetCode.EvaluateReversePolishNotation
        LeetCode.EvaluateReversePolishNotationTest
        LeetCode.LongestSubstring
        LeetCode.LongestSubstringTest
        LeetCode.RichestCustomerWealth
        LeetCode.RichestCustomerWealthTest
        LeetCode.StringToInteger
        LeetCode.StringToIntegerTest
        LeetCode.ValidParentheses
        LeetCode.ValidParenthesesTest
        OpenKattis.Everywhere
        OpenKattis.EverywhereTest
        OpenKattis.FreeFood
        OpenKattis.FreeFoodTest
        OpenKattis.ToLower
        OpenKattis.ToLowerTest

    ghc-options:
        -Wall -Wcompat -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wredundant-constraints -threaded
        -Wno-type-defaults -Wno-name-shadowing -rtsopts -with-rtsopts=-N
        -Wnoncanonical-monad-instances -Widentities

    if impl(ghc >=8.2)
        ghc-options: -fhide-source-paths

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists -Wpartial-fields

    if impl(ghc >=8.8)
        ghc-options: -Wmissing-deriving-strategies -fwrite-ide-info -hiedir=.hie

    if impl(ghc >=8.10)
        ghc-options: -Wunused-packages

    if impl(ghc >=9.0)
        ghc-options: -Winvalid-haddock

    if impl(ghc >=9.2)
        ghc-options: -Wredundant-bang-patterns -Woperator-whitespace

    if impl(ghc >=9.4)
        ghc-options: -Wredundant-strictness-flags

    build-depends:
        , base         >=4.13 && <5
        , containers
        , tasty
        , tasty-hunit
        , text

    default-language: Haskell2010
